# RTRTC

./: DVImage.cpp  DVImage.h  DVSphere.cpp  DVSphere.h  README.md  RTRTC_api.h  RayTracer.cpp  RayTracer.h  rtrtc_built_in.h
cpp/: CMakeLists.txt
cpp/test/: CMakeLists.txt  test_rtrtc.cpp
docs/: scene1_1000.tga
internal/: initialize.cpp  initialize.h  pack_headers.cpp
python/: CMakeLists.txt  PyRTRTC.cpp  README.md  RTRTC.py  api_RTRTC.cpp  setup.py  wheel_hack.py
python/RTRTC/: __init__.py
python/test/: test_rtrtc_scene0.py  test_rtrtc_scene1.py
